--- a/ppts.html
+++ b/ppts.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-        <nav>
+    <!-- Navbar -->
+    <nav>
         <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations</a>    
+        <div class="navbar-marquee">
+            <span>Website designed by Kusum Yadav</span>
+        </div>
     </nav>
 
     <div class="container">
@@ -22,50 +26,52 @@
         </div>
     </div>
 
-<script>
-    const pptDocuments = [
-        { 
-            name: "PowerPoint Document 1", 
-            previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
-            downloadUrl: "docs/Global_warming_in_india_and_water_availability[1].pptx", 
-            imgSrc: "images/ppt-icon.png", 
-            description: "An introduction to global warming and water availability." 
-        },
-        { 
-            name: "PowerPoint Document 2", 
-            previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
-            downloadUrl: "docs/presentation2.pptx", 
-            imgSrc: "images/ppt-icon.png", 
-            description: "Detailed overview of water scarcity solutions." 
-        }
-    ];
+    <script>
+        const pptDocuments = [
+            { 
+                name: "PowerPoint Document 1", 
+                previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
+                downloadUrl: "docs/Global_warming_in_india_and_water_availability[1].pptx", 
+                imgSrc: "images/ppt-icon.png", 
+                description: "An introduction to global warming and water availability." 
+            },
+            { 
+                name: "PowerPoint Document 2", 
+                previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
+                downloadUrl: "docs/presentation2.pptx", 
+                imgSrc: "images/ppt-icon.png", 
+                description: "Detailed overview of water scarcity solutions." 
+            }
+        ];
 
-    const pptList = document.getElementById("pptList");
+        const pptList = document.getElementById("pptList");
 
-    // Dynamically load PowerPoint documents
-    pptDocuments.forEach(doc => {
-        const docBox = document.createElement("div");
-        docBox.classList.add("doc-box");
-        docBox.innerHTML = `
-            <img src="${doc.imgSrc}" alt="${doc.name}" class="doc-image">
-            <p>${doc.name}</p>
-            <p class="doc-description">${doc.description}</p>
-            <button class="preview-btn" data-url="${doc.previewUrl}">Preview</button>
-            <a href="${doc.downloadUrl}" class="download-btn" download="${doc.name}">Download</a>
-        `;
-        pptList.appendChild(docBox);
-    });
+        // Dynamically load PowerPoint documents
+        pptDocuments.forEach(doc => {
+            const docBox = document.createElement("div");
+            docBox.classList.add("doc-box");
+            docBox.innerHTML = `
+                <img src="${doc.imgSrc}" alt="${doc.name}" class="doc-image">
+                <p>${doc.name}</p>
+                <p class="doc-description">${doc.description}</p>
+                <div class="button-container">
+                    <button class="preview-btn" data-url="${doc.previewUrl}">Preview</button>
+                    <a href="${doc.downloadUrl}" class="download-btn" download="${doc.name}">Download</a>
+                </div>
+            `;
+            pptList.appendChild(docBox);
+        });
 
-    // Preview functionality (opens the document in a new tab)
-    pptList.addEventListener("click", (e) => {
-        if (e.target && e.target.classList.contains("preview-btn")) {
-            const documentUrl = e.target.getAttribute("data-url");
+        // Preview functionality (opens the document in a new tab)
+        pptList.addEventListener("click", (e) => {
+            if (e.target && e.target.classList.contains("preview-btn")) {
+                const documentUrl = e.target.getAttribute("data-url");
 
-            // Open preview in a new tab (Google Slides Embed link)
-            window.open(documentUrl, "_blank");
-        }
-    });
-</script>
+                // Open preview in a new tab (Google Slides Embed link)
+                window.open(documentUrl, "_blank");
+            }
+        });
+    </script>
 
 </body>
 </html>
