--- a/ppts.html
+++ b/ppts.html
@@ -14,7 +14,7 @@
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations</a>    
-        <div class="navbar-marquee">
+        <div class="navbar-marquee" style="color: white;>
             <span>Website designed by Kusum Yadav</span>
         </div>
     </nav>
