--- a/pdfs.html
+++ b/pdfs.html
@@ -14,6 +14,9 @@
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations</a>    
+        <div class="navbar-marquee">
+            <span style="color:white;">Website designed by Kusum Yadav</span>
+        </div>
     </nav>
 
     <div class="container">
