--- a/home.html
+++ b/home.html
@@ -18,8 +18,16 @@
     </nav>
 
     <div class="container">
-        <h1>Welcome to Document Viewer</h1>
-        <p>Select a document type from the menu to view or download:</p>
+<h1 style="
+    display: flex;
+    justify-content: center;
+    color: blue;
+">Welcome to Document Viewer</h1>
+<p style="
+    display: flex;
+    justify-content: center;
+    color: darkblue;
+">Select a document type from the menu to view or download:</p>
     </div>
 
 </body>
