--- a/ppts.html
+++ b/ppts.html
@@ -41,6 +41,13 @@
                 downloadUrl: "docs/presentation2.pptx", 
                 imgSrc: "images/ppt-icon.png", 
                 description: "Detailed overview of water scarcity solutions." 
+            },
+            { 
+                name: "PowerPoint Document 3", 
+                previewUrl: "https://docs.google.com/presentation/d/1XZjQ6LSuAfqZyhwa5jv5glMN_1tvb88T/embed", 
+                downloadUrl: "docs//PowerPoint Presentation 1.pptx", 
+                imgSrc: "images/ppt-icon.png", 
+                description: "Detailed overview of water scarcity solutions." 
             }
         ];
 
