--- a/docs.html
+++ b/docs.html
@@ -15,7 +15,7 @@
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations</a>    
         <div class="navbar-marquee">
-            <span>Website designed by Kusum Yadav</span>
+            <span style="color:white;">Website designed by Kusum Yadav</span>
         </div>
     </nav>
 
