--- a/docs.html
+++ b/docs.html
@@ -20,7 +20,10 @@
     </nav>
 
     <div class="container">
-        <h1>Word Documents</h1>
+<h1 style="
+    display: flex;
+    justify-content: center;
+    color: blue;">Word Documents</h1>
         <div id="docList" class="document-list">
             <!-- Word Documents will be dynamically loaded here -->
         </div>
