--- a/pdfs.html
+++ b/pdfs.html
@@ -20,7 +20,10 @@
     </nav>
 
     <div class="container">
-        <h1>PDF Documents</h1>
+<h1 style="
+    display: flex;
+    justify-content: center;
+    color: red;">PDF Documents</h1>
         <div id="pdfList" class="document-list">
             <!-- PDF Documents will be dynamically loaded here -->
         </div>
