--- a/ppts.html
+++ b/ppts.html
@@ -20,7 +20,10 @@
     </nav>
 
     <div class="container">
-        <h1>PowerPoint Documents</h1>
+<h1 style="
+    display: flex;
+    justify-content: center;
+    color: orange;">PowerPoint Documents</h1>
         <div id="pptList" class="document-list">
             <!-- PowerPoint Documents will be dynamically loaded here -->
         </div>
