--- a/ppts.html
+++ b/ppts.html
@@ -13,7 +13,7 @@
         <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
-        <a href="ppts.html">PowerPoint Presentations</a>    
+        <a href="ppts.html" style="color:orange;">PowerPoint Presentations</a>    
         <div class="navbar-marquee">
             <span style="color: white;">Website designed by Kusum Yadav</span>
         </div>
