--- a/pdfs.html
+++ b/pdfs.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav>
         <a href="home.html">Home</a>
-        <a href="pdfs.html">PDF Documents</a>
+        <a href="pdfs.html" style="color:red;">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations</a>    
         <div class="navbar-marquee">
