--- a/ppts.html
+++ b/ppts.html
@@ -10,10 +10,10 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="home.html">Home</a>
-        <a href="pdfs.html">PDF Documents</a>
-        <a href="docs.html">Word Documents</a>
-        <a href="ppts.html" style="color:orange;">PowerPoint Presentations</a>    
+        <a href="home.html" style="color:purple">Home</a>
+        <a href="pdfs.html" style="color:red;">PDF Documents</a>
+        <a href="docs.html" style="color:blue">Word Documents</a>
+        <a href="ppts.html" style="color:orange">PowerPoint Presentations</a>    
         <div class="navbar-marquee">
             <span style="color: white;">Website designed by Kusum Yadav</span>
         </div>
