--- a/home.html
+++ b/home.html
@@ -10,10 +10,10 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="home.html">Home</a>
-        <a href="pdfs.html">PDF Documents</a>
-        <a href="docs.html">Word Documents</a>
-        <a href="ppts.html">PowerPoint Presentations
+        <a href="home.html" style="color:#f5b4f5">Home</a>
+        <a href="pdfs.html" style="color:red;">PDF Documents</a>
+        <a href="docs.html" style="color:#aeaef4">Word Documents</a>
+        <a href="ppts.html" style="color:orange">PowerPoint Presentations</a>    
 </a>    
     </nav>
 
