--- a/docs.html
+++ b/docs.html
@@ -10,9 +10,9 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="home.html" style="color:purple">Home</a>
+        <a href="home.html" style="color:#f5b4f5">Home</a>
         <a href="pdfs.html" style="color:red;">PDF Documents</a>
-        <a href="docs.html" style="color:blue">Word Documents</a>
+        <a href="docs.html" style="color:#aeaef4">Word Documents</a>
         <a href="ppts.html" style="color:orange">PowerPoint Presentations</a>    
         <div class="navbar-marquee">
             <span style="color:white;">Website designed by Kusum Yadav</span>
