--- a/ppts.html
+++ b/ppts.html
@@ -51,7 +51,15 @@
                 downloadUrl: "docs//PowerPoint Presentation 1.pptx", 
                 imgSrc: "images/ppt-icon.png", 
                 description: "Detailed overview of water scarcity solutions." 
+            },
+             { 
+                name: "PowerPoint Document 3", 
+                previewUrl: "https://docs.google.com/presentation/d/1rF7vhpRgW6oCbyjqeCGKW2ibhV8CZ-uT/embed, 
+                downloadUrl: "docs/Career readiness for student.pptx", 
+                imgSrc: "images/ppt-icon.png", 
+                description: "Detailed overview of water scarcity solutions." 
             }
+
         ];
 
         const pptList = document.getElementById("pptList");
