--- a/ppts.html
+++ b/ppts.html
@@ -34,7 +34,7 @@
             { 
                 name: "PowerPoint Document 1", 
                 previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
-                downloadUrl: "docs/Global_warming_in_india_and_water_availability[1].pptx", 
+                downloadUrl: "docs/Career readiness for student.pptx", 
                 imgSrc: "images/ppt-icon.png", 
                 description: "An introduction to global warming and water availability." 
             },
