--- a/ppts.html
+++ b/ppts.html
@@ -20,10 +20,7 @@
     </nav>
 
     <div class="container">
-<h1 style="
-    display: flex;
-    justify-content: center;
-    color: orange;">PowerPoint Documents</h1>
+        <h1 style="display: flex; justify-content: center; color: orange;">PowerPoint Documents</h1>
         <div id="pptList" class="document-list">
             <!-- PowerPoint Documents will be dynamically loaded here -->
         </div>
@@ -52,14 +49,13 @@
                 imgSrc: "images/ppt-icon.png", 
                 description: "Detailed overview of water scarcity solutions." 
             },
-             { 
-                name: "PowerPoint Document 3", 
-                previewUrl: "https://docs.google.com/presentation/d/1rF7vhpRgW6oCbyjqeCGKW2ibhV8CZ-uT/embed, 
+            { 
+                name: "PowerPoint Document 4", 
+                previewUrl: "https://docs.google.com/presentation/d/1rF7vhpRgW6oCbyjqeCGKW2ibhV8CZ-uT/embed", 
                 downloadUrl: "docs/Career readiness for student.pptx", 
                 imgSrc: "images/ppt-icon.png", 
                 description: "Detailed overview of water scarcity solutions." 
             }
-
         ];
 
         const pptList = document.getElementById("pptList");
@@ -93,4 +89,3 @@
 
 </body>
 </html>
-
