--- a/ppts.html
+++ b/ppts.html
@@ -29,11 +29,11 @@
     <script>
         const pptDocuments = [
             { 
-                name: "PowerPoint Document 1", 
+                name: "Career readiness for student", 
                 previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
                 downloadUrl: "docs/Career readiness for student.pptx", 
                 imgSrc: "images/ppt-icon.png", 
-                description: "An introduction to global warming and water availability." 
+                // description: "An introduction to global warming and water availability." 
             },
             { 
                 name: "PowerPoint Document 2", 
