--- a/ppts.html
+++ b/ppts.html
@@ -38,9 +38,9 @@
             { 
                 name: "PowerPoint Document 2", 
                 previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", 
-                downloadUrl: "docs/presentation2.pptx", 
+                downloadUrl: "docs//Global_warming_in_india_and_water_availability.pptx", 
                 imgSrc: "images/ppt-icon.png", 
-                description: "Detailed overview of water scarcity solutions." 
+                // description: "Detailed overview of water scarcity solutions." 
             },
             { 
                 name: "PowerPoint Document 3", 
