--- a/pdfs.html
+++ b/pdfs.html
@@ -32,9 +32,9 @@
     <script>
         const pdfDocuments = [
             { 
-                name: "PDF Document 1", 
+                name: "Information Technology", 
                 previewUrl: "docs/document1.pdf", 
-                downloadUrl: "docs/document1.pdf", 
+                downloadUrl: "docs/INFORMATION TECHNOLOGY-1.pdf", 
                 imgSrc: "images/pdf-icon.png", 
                 description: "This is the description for PDF Document 1." 
             },
