--- a/pdfs.html
+++ b/pdfs.html
@@ -33,7 +33,7 @@
         const pdfDocuments = [
             { 
                 name: "Information Technology", 
-                previewUrl: "docs/document1.pdf", 
+                previewUrl: "https://drive.google.com/file/d/1pJ91pAEgN4tFDo0UqC7s1wybX46HE55j/view?usp=sharing", 
                 downloadUrl: "docs/INFORMATION TECHNOLOGY-1.pdf", 
                 imgSrc: "images/pdf-icon.png", 
                 description: "This is the description for PDF Document 1." 
