--- a/pdfs.html
+++ b/pdfs.html
@@ -31,20 +31,27 @@
 
     <script>
         const pdfDocuments = [
-            { 
-                name: "Information Technology", 
-                previewUrl: "https://drive.google.com/file/d/1pJ91pAEgN4tFDo0UqC7s1wybX46HE55j/view?usp=sharing", 
-                downloadUrl: "docs/INFORMATION TECHNOLOGY-1.pdf", 
-                imgSrc: "images/pdf-icon.png", 
-                description: "This is the description for PDF Document 1." 
-            },
-            { 
-                name: "PDF Document 2", 
-                previewUrl: "docs/document2.pdf", 
-                downloadUrl: "docs/document2.pdf", 
-                imgSrc: "images/pdf-icon.png", 
-                description: "An overview of important topics covered in PDF Document 2." 
-            }
+    { 
+        "name": "Information Technology", 
+        "previewUrl": "https://drive.google.com/file/d/1pJ91pAEgN4tFDo0UqC7s1wybX46HE55j/view?usp=sharing", 
+        "downloadUrl": "docs/INFORMATION TECHNOLOGY-1.pdf", 
+        "imgSrc": "images/pdf-icon.png", 
+        "description": "Covers IT concepts, trends, and foundational knowledge."
+    },
+    { 
+        "name": "For Students Guidance", 
+        "previewUrl": "https://drive.google.com/file/d/17O8IDvaZeW23m6hJGNSBr8qKDBbe3kCy/view?usp=sharing", 
+        "downloadUrl": "docs/Students Guidence.pdf", 
+        "imgSrc": "images/pdf-icon.png", 
+        "description": "A guide with tips for academic and career success."
+    },
+    { 
+        "name": "Financial Literacy Students", 
+        "previewUrl": "https://drive.google.com/file/d/1RRPdBHibnugG09nIl3ITL1STtS7KnEL_/view?usp=sharing", 
+        "downloadUrl": "docs/financial_Literacy_students-2.pdf", 
+        "imgSrc": "images/pdf-icon.png", 
+        "description": "Teaches budgeting, saving, and money management."
+    }
         ];
 
         const pdfList = document.getElementById("pdfList");
