--- a/ppts.html
+++ b/ppts.html
@@ -32,49 +32,49 @@
                 name: "Career readiness for student", 
                 previewUrl: "https://docs.google.com/presentation/d/1rF7vhpRgW6oCbyjqeCGKW2ibhV8CZ-uT/preview", 
                 downloadUrl: "docs/Career readiness for student.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "An introduction to career readiness for students."
             },
             { 
                 name: "Global warming in India and water availability", 
                 previewUrl: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/preview", 
                 downloadUrl: "docs/Global_warming_in_india_and_water_availability.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "Detailed overview of global warming and water scarcity."
             },
             { 
                 name: "Money Management for youth", 
                 previewUrl: "https://docs.google.com/presentation/d/1r5ya0cVVSlt3waz7D6fPv_JS0XlW1e7M/preview", 
                 downloadUrl: "docs/MONEY MANAGEMENT FOR YOUTH.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "Guidance on managing money effectively for young individuals."
             },
             { 
                 name: "Steps for how to apply passport and visa", 
                 previewUrl: "https://docs.google.com/presentation/d/1OT0IWz3D8jyBz0ABLSzlybd4KftzQaPd/preview", 
                 downloadUrl: "docs/Steps for how to apply passport and visa (1).pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "Step-by-step guide on applying for a passport and visa."
             },
             { 
                 name: "Computer shortcuts keys", 
                 previewUrl: "https://docs.google.com/presentation/d/11TgAAcguVInAw3QMmgX1MFNvPhp4iHGd/preview", 
                 downloadUrl: "docs/computer short keys.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "A collection of essential computer shortcuts for efficiency."
             },
             { 
                 name: "Steps for how to apply passport and visa 2", 
                 previewUrl: "https://docs.google.com/presentation/d/1fGHH6Mo4awJhkEdEIB9cPGRsSlC6xOfF/preview", 
                 downloadUrl: "docs/passport.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "Additional details on applying for passports and visas."
             },
             { 
                 name: "How NGO works", 
                 previewUrl: "https://docs.google.com/presentation/d/1-X5i8C_Fr4kjYbiu_gsDu4yVTgOrf9sg/preview", 
                 downloadUrl: "docs/ppt for ngo work done.pptx", 
-                imgSrc: "images/ppt-icon.png", 
+                imgSrc: "img/ppt.svg", 
                 description: "An overview of how NGOs function and operate."
             }
         ];
