--- a/docs.html
+++ b/docs.html
@@ -35,21 +35,21 @@
                 name: "How the share market works", 
                 previewUrl: "https://docs.google.com/document/d/11KShiN2tFwdC0pdAWXvMWUBVbUKR4n80/edit?usp=sharing&ouid=103879223690090544024&rtpof=true&sd=true", 
                 downloadUrl: "docs/How the share market works 1.docx", 
-                imgSrc: "images/word-icon.png", 
+                imgSrc: "img/pdf.svg", 
                 description: "This is the word document about how share market works." 
             },
             { 
                 name: "goverment scheme", 
                 previewUrl: "https://docs.google.com/document/d/17oTnVxZ8YXEKMe3qwQE6CDBR4NrO5cUo/edit?usp=sharing&ouid=103879223690090544024&rtpof=true&sd=true", 
                 downloadUrl: "docs/goverment scheme.docx", 
-                imgSrc: "images/word-icon.png", 
+                imgSrc: "img/pdf.svg", 
                 description: "An overview of important goverment scheme." 
             },
             { 
                 name: "Kumbh mela", 
                 previewUrl: "https://docs.google.com/document/d/1hG5e_YNTjINgMHVlVdrhvNN_LiJpowrL/edit?usp=sharing&ouid=103879223690090544024&rtpof=true&sd=true", 
                 downloadUrl: "docs/Kumbh mela.docx", 
-                imgSrc: "images/word-icon.png", 
+                imgSrc: "img/pdf.svg", 
                 description: "An overview of important about kumbh mela" 
             }
         ];
