--- a/pdfs.html
+++ b/pdfs.html
@@ -35,21 +35,21 @@
         "name": "Information Technology", 
         "previewUrl": "https://drive.google.com/file/d/1pJ91pAEgN4tFDo0UqC7s1wybX46HE55j/view?usp=sharing", 
         "downloadUrl": "docs/INFORMATION TECHNOLOGY-1.pdf", 
-        "imgSrc": "images/pdf-icon.png", 
+        "imgSrc": "img/pdf.svg", 
         "description": "Covers IT concepts, trends, and foundational knowledge."
     },
     { 
         "name": "For Students Guidance", 
         "previewUrl": "https://drive.google.com/file/d/17O8IDvaZeW23m6hJGNSBr8qKDBbe3kCy/view?usp=sharing", 
         "downloadUrl": "docs/Students Guidence.pdf", 
-        "imgSrc": "images/pdf-icon.png", 
+        "imgSrc": "img/pdf.svg", 
         "description": "A guide with tips for academic and career success."
     },
     { 
         "name": "Financial Literacy Students", 
         "previewUrl": "https://drive.google.com/file/d/1RRPdBHibnugG09nIl3ITL1STtS7KnEL_/view?usp=sharing", 
         "downloadUrl": "docs/financial_Literacy_students-2.pdf", 
-        "imgSrc": "images/pdf-icon.png", 
+        "imgSrc": "img/pdf.svg", 
         "description": "Teaches budgeting, saving, and money management."
     }
         ];
