--- a/ppts.html
+++ b/ppts.html
@@ -72,6 +72,13 @@
             },
             { 
                 name: "How NGO works", 
+                previewUrl: "https://docs.google.com/presentation/d/1-X5i8C_Fr4kjYbiu_gsDu4yVTgOrf9sg/preview",
+                downloadUrl: "docs/ppt for ngo work done.pptx", 
+                imgSrc: "img/power.svg", 
+                description: "An overview of how NGOs function and operate."
+            } ,
+            { 
+                name: "How NGO works", 
                 previewUrl: "https://docs.google.com/presentation/d/1-X5i8C_Fr4kjYbiu_gsDu4yVTgOrf9sg/preview", 
                 downloadUrl: "docs/ppt for ngo work done.pptx", 
                 imgSrc: "img/power.svg", 
