--- a/ppts.html
+++ b/ppts.html
@@ -78,11 +78,11 @@
                 description: "An overview of how NGOs function and operate."
             } ,
             { 
-                name: "How NGO works", 
-                previewUrl: "https://docs.google.com/presentation/d/1-X5i8C_Fr4kjYbiu_gsDu4yVTgOrf9sg/preview", 
-                downloadUrl: "docs/ppt for ngo work done.pptx", 
+                name: "About UPI System", 
+                previewUrl: "https://docs.google.com/presentation/d/1APN5CkoGA1ujEHdiCkvBYkjHEU48dHk5/preview", 
+                downloadUrl: "docs/upi payments system.pptx", 
                 imgSrc: "img/power.svg", 
-                description: "An overview of how NGOs function and operate."
+                description: "About UPI Payments System Works."
             }
         ];
 
